--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "preinstall": "npm i -g @nestjs/cli && npm i --save-dev @types/node"
+    "preinstall": "npm i -g @nestjs/cli"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
