--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.11.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "i": "^0.3.7",
     "jest": "^29.5.0",
+    "npm": "^10.3.0",
     "prettier": "^3.0.0",
     "prisma": "^5.8.1",
     "source-map-support": "^0.5.21",
