--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
   },
-  "exclude": ["node_modules", "dist"]
+  "include": ["./src", "src/**/*"],
+  "exclude": ["node_modules", "dist"],
 }
